vertical alignment fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,12 @@ body {
     width: 100%;
    
 }
+/* Acerca de Mi */
+
+#acerca-de-mi{
+  width: 100%;
+}
+
 /* Mis trabajos */
 
 #Mis-trabajos{
@@ -131,17 +137,3 @@ button:focus{
   color: #ffba08;
 }
 
-/* nav{
-  background-image: url(/assets/img/fondonav.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100vh;
-}
-nav a, li{
-  text-decoration: none !important;
-  color: #9d0208 !important;
-  font-family: 'Six Caps','Oswald','Staatliches', sans-serif !important;
-  text-shadow: #6a040f 1px 1px 0.3px !important;
-  font-size: xx-large;
-} */
